<?xml version="1.0"?>
<package>
    <name>manipulation_markers</name>
    <version>0.9.1</version>
    <description>The manipulation_markers package</description>

    <maintainer email="caron@ynl.t.u-tokyo.ac.jp">Stephane Caron</maintainer>
    <author>Stephane Caron</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>visualization_msgs</run_depend>
</package>
